--- a/frontend/src/app/dialogs/material-test-elements/dialog-element-crud-operations/dialog-add-element/dialog-add-element.component.html
+++ b/frontend/src/app/dialogs/material-test-elements/dialog-element-crud-operations/dialog-add-element/dialog-add-element.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Add New Element</h2>
 <mat-dialog-content class="mat-typography">
-<div class="example-container">
+<div>
 	<form [formGroup]="form" class="form-flex-column">
 	<div class="control form-group-div">
 		<label for="elementName" class="input-label-modal">Element Name :</label>
