--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -61,3 +61,7 @@ input.ng-invalid.ng-touched.ng-dirty {
 	font-weight: bold;
 	display: block;
 }
+.form-check-input{
+	margin-right: 8px;
+	border-color: #7c7c7c;
+}
