- Added in expenseAmount error validation message - Fixed issue with determining that the number was zero in the expenseAmount validation

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -43,9 +43,9 @@
           name="expenseAmount"
           formControlName="expenseAmount"
         />
-        <!-- @if(formControlHasError(form.controls.expenseAmount)){
+        @if(formControlHasError(form.controls.expenseAmount)){
 			<label class="error-label">{{getFormControlErrorDetails(form.controls.expenseAmount)}}</label>
-		} -->
+		}
       </div>
 
       <div formGroupName="checkboxes">
