fixed issue with datepicker

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -8,7 +8,7 @@
         >
         <input
           id="expenseDate"
-          class="input-textbox input-textbox-modal"
+          class="input-date input-date-modal"
           type="date"
           name="expenseDate"
           formControlName="expenseDate"
