added ability to select a paymentType option

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -127,7 +127,7 @@
           <div
             class="autocomplete-result-item"
             id="paymentTypeSearchResult_{{ currentPaymentType.paymentTypeID }}"
-            (click)="click_expenseTypeResult(currentPaymentType.paymentTypeID)"
+            (click)="click_paymentTypeResult(currentPaymentType.paymentTypeID)"
           >
             {{ currentPaymentType.paymentTypeName }}
           </div>
