fixed styling issue where labels were not turning "red" on error

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -57,7 +57,7 @@
       </div>
 
       <!-- Expense Type Name -->
-      <div>
+      <div class="control form-group-div">
         <label for="expenseTypeName" class="input-label-modal">
           Expense Type :
         </label>
@@ -102,7 +102,7 @@
       </div>
 
       <!-- Payment Type Name -->
-      <div>
+      <div class="control form-group-div">
         <label
           for="paymentTypeName"
           class="input-label-modal top-margin-spacing"
