--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -4,28 +4,27 @@
     <form [formGroup]="form" class="form-flex-column">
       <!-- Expense Date -->
       <div class="control form-group-div">
-		<fieldset class="border fieldset-rounded p-2">
-            <legend class="float-none w-auto px-3 fieldset-legend" >Test</legend>
-          <input
-            id="expenseDate"
-            class="input-date input-date-modal"
-            type="date"
-            name="expenseDate"
-            formControlName="expenseDate"
-          />
-          @if(formControlHasError(form.controls.expenseDate)){
-          {{
-            updateFormControlErrorLabelHTML(form.controls.expenseDescription)
-          }}
-          <label class="error-label" id="errorLabel_expenseDate"></label>
-          }
-        </fieldset>
+        <label for="expenseDate" class="input-label-modal"
+          >Expense Date :</label
+        >
+        <input
+          id="expenseDate"
+          class="input-date input-date-modal"
+          type="date"
+          name="expenseDate"
+          formControlName="expenseDate"
+        />
+        @if(formControlHasError(form.controls.expenseDate)){
+			{{updateFormControlErrorLabelHTML(form.controls.expenseDescription)}}
+        <label class="error-label" id="errorLabel_expenseDate"></label>
+        }
       </div>
 
       <!-- Expense Description -->
       <div class="control form-group-div">
-        <fieldset class="border fieldset-rounded p-2">
-            <legend class="float-none w-auto px-3 fieldset-legend" >Expense Description</legend>
+        <label for="expenseDescription" class="input-label-modal"
+          >Expense Description :</label
+        >
         <input
           id="expenseDescription"
           class="input-textbox input-textbox-modal"
@@ -34,10 +33,9 @@
           formControlName="expenseDescription"
         />
         @if(formControlHasError(form.controls.expenseDescription)){
-        {{ updateFormControlErrorLabelHTML(form.controls.expenseDescription) }}
+        {{updateFormControlErrorLabelHTML(form.controls.expenseDescription)}}
         <label class="error-label" id="errorLabel_expenseDescription"></label>
         }
-		</fieldset>
       </div>
 
       <!-- Expense Amount -->
@@ -53,7 +51,7 @@
           formControlName="expenseAmount"
         />
         @if(formControlHasError(form.controls.expenseAmount)){
-        {{ updateFormControlErrorLabelHTML(form.controls.expenseAmount) }}
+        {{updateFormControlErrorLabelHTML(form.controls.expenseAmount)}}
         <label class="error-label" id="errorLabel_expenseAmount"></label>
         }
       </div>
@@ -94,10 +92,11 @@
           }
         </div>
         @if(formControlHasError(form.controls.expenseTypeName)){
-        {{ updateFormControlErrorLabelHTML(form.controls.expenseTypeName) }}
+        {{updateFormControlErrorLabelHTML(form.controls.expenseTypeName)}}
         <label class="error-label" id="errorLabel_expenseTypeName"></label>
-        } @if(formControlHasError(form.controls.expenseTypeID)){
-        {{ updateFormControlErrorLabelHTML(form.controls.expenseTypeID) }}
+        }
+		@if(formControlHasError(form.controls.expenseTypeID)){
+        {{updateFormControlErrorLabelHTML(form.controls.expenseTypeID)}}
         <label class="error-label" id="errorLabel_expenseTypeID"></label>
         }
       </div>
@@ -141,10 +140,11 @@
           }
         </div>
         @if(formControlHasError(form.controls.paymentTypeName)){
-        {{ updateFormControlErrorLabelHTML(form.controls.paymentTypeName) }}
+        {{updateFormControlErrorLabelHTML(form.controls.paymentTypeName)}}
         <label class="error-label" id="errorLabel_paymentTypeName"></label>
-        } @if(formControlHasError(form.controls.paymentTypeID)){
-        {{ updateFormControlErrorLabelHTML(form.controls.paymentTypeID) }}
+        }
+		@if(formControlHasError(form.controls.paymentTypeID)){
+        {{updateFormControlErrorLabelHTML(form.controls.paymentTypeID)}}
         <label class="error-label" id="errorLabel_paymentTypeID"></label>
         }
       </div>
